/* MetaTager ver.1.1.1-beta
---------------------------------------------------------*/
- Добавлен чанк title
- В пакет добавлена библиотека Grayscale под JQuery

/* MetaTager ver.1.1.0-beta
---------------------------------------------------------*/
- Добавлены чанки preHead и postHead
- В пакет добавлены библиотеки JQuery и её плагины (Colorbox, Vegas, timers и т.д.) путь записи /assets/components/metatager/lib/

/* MetaTager ver.1.0.0-beta
---------------------------------------------------------*/
- Создан чанк metatager
- Первый выпуск