@@ -1,3 +1,8 @@
+/* MetaTager ver.1.2.0-beta
+---------------------------------------------------------*/
+- Добавлена совместимость со Sterc SEOPro
+- Добавлен вывод мета тега Charset
+
 /* MetaTager ver.1.1.1-beta
 ---------------------------------------------------------*/
 - Добавлен чанк title
